# mydjangowebsite

./: .dockerignore  .gitignore  Dockerfile  django_conf.yaml  pyproject.toml
deploy/argo-events/: event-sources.yaml  githubcred.yaml  sensors.yaml
deploy/kustomize/overlays/production/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
deploy/kustomize/overlays/staging/: deployment.yaml  ingress.yaml  kustomization.yaml  service.yaml
django_website/myapp/: urls.py  views.py
django_website/mywebsite/: settings.py  urls.py
